--- a/style.css
+++ b/style.css
@@ -6,6 +6,16 @@
   font-family: "Poppins", sans-serif;
 }
 
+.time-slice {
+    display: -webkit-box;
+    -webkit-align-items: strech;
+}
+
+.date.time {
+    -webkit-flex-shrink: 0;
+    -webkit-flex-basis: 100px
+}
+
 body {
     display: absolute;
     align-items: left;
