--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 .container {
     margin: 0 auto;
     padding: 1rem;
-    width: 1000px;
+    width: 100% auto;
     max-width: 100%;
 }
 
